feat: markdown-based video summaries with custom instructions
- LLM returns free-form markdown instead of fixed JSON structure
- Timestamps embedded as [MM:SS](t:seconds) clickable links
- User can add custom instructions to guide the analysis
- SummaryDisplay renders markdown via react-markdown + remark-gfm
- Simplified DB schema (summary_en/summary_zh markdown columns)
- Bilingual support (EN/ZH toggle)
- Unified card-style input UI with inline instructions field
- Full project: captions (YouTube API + Whisper fallback), history, favorites, transcript panel

--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "better-sqlite3": "^12.6.2",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
+    "youtube-captions-scraper": "^2.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/youtube": "^0.1.2",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
@@ -28,6 +34,7 @@
     "unrs-resolver"
   ],
   "trustedDependencies": [
+    "better-sqlite3",
     "sharp",
     "unrs-resolver"
   ]
